[gd_scene format=3 uid="uid://hyaky5wvg7rp"]

[ext_resource type="Script" uid="uid://c2xpksl3xo3r7" path="res://hisami.gd" id="1_w4aru"]
[ext_resource type="Texture2D" uid="uid://c58eajkryrh13" path="res://hisami.png" id="2_dgy2n"]
[ext_resource type="Texture2D" uid="uid://c54g484vh7d8h" path="res://hisami_move.png" id="3_8wejl"]
[ext_resource type="Script" uid="uid://bfin0v5wfjh05" path="res://hitbox.gd" id="3_del5l"]
[ext_resource type="Texture2D" uid="uid://bh6356s1n5iu2" path="res://hisami_2.png" id="3_vapyc"]
[ext_resource type="Texture2D" uid="uid://dakpwusuyjwqo" path="res://hisami_3.png" id="4_5pdxg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_del5l"]
atlas = ExtResource("2_dgy2n")
region = Rect2(0, 0, 54, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_8v350"]
atlas = ExtResource("3_8wejl")
region = Rect2(0, 0, 54, 54)

[sub_resource type="SpriteFrames" id="SpriteFrames_8wejl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_del5l")
}, {
"duration": 1.0,
"texture": ExtResource("3_vapyc")
}, {
"duration": 1.0,
"texture": ExtResource("2_dgy2n")
}, {
"duration": 1.0,
"texture": ExtResource("4_5pdxg")
}],
"loop": true,
"name": &"default",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8v350")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8wejl"]
size = Vector2(10, 10)

[sub_resource type="CircleShape2D" id="CircleShape2D_del5l"]
radius = 100.0

[node name="Hisami" type="Node2D" unique_id=1429502819]
script = ExtResource("1_w4aru")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=1823804009]
z_index = 1
sprite_frames = SubResource("SpriteFrames_8wejl")

[node name="InvulTimer" type="Timer" parent="." unique_id=1495799990]
one_shot = true

[node name="Hitbox" type="Area2D" parent="." unique_id=1834568935]
collision_mask = 34
script = ExtResource("3_del5l")
metadata/_custom_type_script = "uid://bfin0v5wfjh05"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox" unique_id=1928595632]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_8wejl")

[node name="ShotTimer" type="Timer" parent="." unique_id=263025841]

[node name="CollectionBox" type="Area2D" parent="." unique_id=358303626]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectionBox" unique_id=112805162]
shape = SubResource("CircleShape2D_del5l")

[connection signal="timeout" from="InvulTimer" to="." method="_on_invul_timer_timeout"]
[connection signal="area_entered" from="Hitbox" to="Hitbox" method="_on_area_entered"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_shot_timer_timeout"]
